--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,8 @@
       crossorigin="anonymous"
     />
     <script src="https://kit.fontawesome.com/6f543f7dcb.js" crossorigin="anonymous"></script>
-    
+    <script src="{{ url_for('static', filename='js/style.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     
 </head>
   <body>
