--- a/templates/admin_put.html
+++ b/templates/admin_put.html
@@ -91,8 +91,8 @@
         <script>
             function obtenerDatos() {
                 fetch('https://appweb-ff96f-default-rtdb.firebaseio.com/cursos.json')
-                .then(response => response.json())
-                .then(data => {
+                .then(response => response.json())// LOS THEN SON PROMESAS
+                .then(data => {                   // EL DATA ES LA RESPUESTA DEL SERVIDOR CONVERTIDA A JSON
                     const cardDeck = document.getElementById('card');
                     cardDeck.innerHTML = '';
 
