--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,8 @@
     <script src="{{ url_for('static', filename='js/style.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     
+    
+    
 </head>
   <body>
    
@@ -220,6 +222,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
       <!-- SCRIPTS -->
       <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/registro.js') }}"></script>
 
     </body>
 </html>
