--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,6 +13,7 @@
     <script src="https://kit.fontawesome.com/6f543f7dcb.js" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/style.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
     
     
     
@@ -223,6 +224,7 @@
       <!-- SCRIPTS -->
       <script src="{{ url_for('static', filename='js/main.js') }}"></script>
       <script src="{{ url_for('static', filename='js/registro.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/login.js') }}"></script>
 
     </body>
 </html>
