--- a/templates/layout.html
+++ b/templates/layout.html
@@ -225,6 +225,7 @@
       <script src="{{ url_for('static', filename='js/main.js') }}"></script>
       <script src="{{ url_for('static', filename='js/registro.js') }}"></script>
       <script src="{{ url_for('static', filename='js/login.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/user.js') }}"></script>
 
     </body>
 </html>
